GNOME Bugzilla – Bug 775736
adblocker sometimes fails to block ads
Last modified: 2016-12-26 23:01:58 UTC
Epiphany will sometimes load ads when adblocker is enabled. A page refresh will (usually) suffice to remove ads. This occurs also with YouTube videos and such. I've not discovered if there is a reliable way to consistently reproduce this behavior. May be relevant: Here is my filters.list: https://easylist.to/easylist/easylist.txt; https://easylist-downloads.adblockplus.org/easylistdutch.txt; https://easylist.to/easylist/easyprivacy.txt; https://easylist.to/easylist/fanboy-annoyance.txt; https://easylist-downloads.adblockplus.org/antiadblockfilters.txt; https://easylist-downloads.adblockplus.org/adwarefilters.txt; https://easylist-downloads.adblockplus.org/malwaredomains_full.txt; https://raw.githubusercontent.com/liamja/Prebake/master/obtrusive.txt; https://www.fanboy.co.nz/enhancedstats.txt; https://secure.fanboy.co.nz/r/fanboy-ultimate.txt;https://easylist-downloads.adblockplus.org/easylist.txt
I think this was probably fixed in bug #775067 (which looks unrelated from the title but rewrote a huge chunk of this code). It looks like we were not waiting for adblock patterns to be fully processed before testing URLs against them. It's important to not load anything before adblock is ready, even though that will slow down starting the browser. The problem is those changes are too big and intrusive to backport to 3.22.
One more thing: if my guess in comment #1 is correct, then that would mean the ads only ever get shown in new tabs. Each tab has its own web process that has to load the adblock filters separately, and the first page load is racing against that.
(In reply to Michael Catanzaro from comment #1) > I think this was probably fixed in bug #775067 (which looks unrelated from > the title but rewrote a huge chunk of this code). By the way: you are not going to like that that has removed support for having multiple adblock filters. We really need to bring that back and add a filters configuration dialog, but that's a matter for another bug report....
OK, I looked into what it would take to fix this in 3.22 and I'm not really comfortable with making changes there, so this will just have to be something that's fixed for 3.24... in any case, thanks for reporting!
If we can only have one filter in 3.24, will there be a way to change that list? For instance, each list has a header indicating the source URL and how often it should be refreshed. Would this file or header be able to be changed manually in order to point to another list?
Unfortunately no. Feel free to file a bug to restore configurability. We should add user interface as well, so you don't need to edit secret configuration files.
Changed my mind, let's fix this in GNOME 3.22 as well.
The following fixes have been pushed: 0ff60f6 uri-tester: process patterns synchronously at startup a97da19 uri-tester: Remove commented code
Created attachment 342100 [details] [review] uri-tester: process patterns synchronously at startup Currently the URI tester loads filters and patterns asynchronously, which is racy as it means ads will sometimes not be blocked when a new web process is loading its first page. Filter processing must always complete before the first resource is requested, so do it synchronously. This is already fixed in a better way on the master branch, so this commit is for GNOME 3.22 only.
Created attachment 342101 [details] [review] uri-tester: Remove commented code It's gone from master branch, no point in keeping it around on gnome-3-22 either.
*** Bug 735309 has been marked as a duplicate of this bug. ***