uri-tester: process patterns synchronously at startup

Currently the URI tester loads filters and patterns asynchronously,
which is racy as it means ads will sometimes not be blocked when a new
web process is loading its first page. Filter processing must always
complete before the first resource is requested, so do it synchronously.

This is already fixed in a better way on the master branch, so this
commit is for GNOME 3.22 only.

https://bugzilla.gnome.org/show_bug.cgi?id=775736